Wed Sep 22 22:12:03 1999 A. Scottedward Hodel <a.s.hodel@eng.auburn.edu>

	* linear-algebra/krylov.m: Correctly handle case of V having full
	rank when V has more columns than rows.

Mon Sep 20 23:04:57 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/linspace.m, linear-algebra/pinv.m: Delete.

	* statistics/tests/manova.m: Avoid problems if
	whitespace_in_literal_matrix is set to "traditional".
	* statistics/tests/t_test_regression.m: Likewise.
	* statistics/tests/u_test.m: Likewise.
	* statistics/tests/chisquare_test_homogeneity.m: Likewise.
	* statistics/tests/anova.m: Likewise.
	* statistics/tests/kruskal_wallis_test.m: Likewise.
	* statistics/base/statistics.m: Likewise.
	* image/saveimage.m: Likewise.
	* signal/arch_fit.m: Likewise.
	* signal/autoreg_matrix.m: Likewise.
	* signal/triangle_lw.m: Likewise.
	* strings/dec2hex.m: Likewise.

Thu Sep  9 19:31:58 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/saveimage.m: Initialize scale.

Sun Sep  5 22:13:47 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/reshape.m: Allow reshape (a, size (b)).

Fri Sep  3 00:01:38 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Improve stopping criterion.
	Add iteration count as second return value.

Mon Aug 30 12:07:00 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/base/mean.m: Use .', not ' to reorient row vectors.

Tue Aug 17 11:11:27 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/pack.m: New function.

Mon Aug 16 07:46:57 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/figure.m: Always return figure number.  With no args,
 	figure now creates a new figure window and returns its number.
	Accept figure (property, value) syntax, but do nothing.

Thu Aug 12 09:28:01 PDT 1999  Tom Poage <tfpoage@ucdavis.edu>

	* general/shift.m: Avoid printing temporary value for backward shift.

Mon Aug  2 16:39:04 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>
